--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: c
-script: make && make test
+script: make "CFLAGS=-O2 -Wall -fPIC -g -DR344_COMPAT" && make test
 addons:
   apt:
     packages:
