make: Makes it possible to run the tests without sudo.
This is mostly for testing on Windows, and testing executables that
already have the capabilities(7) set.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,7 @@
 TEST_PROFILES := sleep.out
 BIN = ../xrprof
 RSCRIPT = Rscript
+SUDO = sudo
 
 all: $(TEST_PROFILES)
 
@@ -9,6 +10,6 @@ clean:
 
 %.out: %.R
 	echo $(BIN)
-	sudo BIN=$(BIN) RSCRIPT=$(RSCRIPT) ./harness.sh $<
+	$(SUDO) BIN=$(BIN) ./harness.sh $<
 
 .PHONY: all clean
