--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies
-      run: apt-get install libelf-dev libunwind-dev
+      run: sudo apt-get install libelf-dev libunwind-dev
     - name: Build
       run: make
   build-windows:
