--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: make CC=gcc.exe
+      run: make -f Makefile.win CC=gcc.exe
