--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Dependencies
       run: sudo apt-get install libelf-dev libunwind-dev
-    - name: Build & Test
-      run: make && make test
+    - name: Build
+      run: make
+    - name: Test
+      run: make test
   build-windows:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build & Test
-      run: make -f Makefile.win CC=gcc.exe && make -f Makefile.win RSCRIPT="Rscript.exe" SUDO="" test
+    - name: Build
+      run: make -f Makefile.win CC=gcc.exe
+    - name: Test
+      run: make -f Makefile.win CC=gcc.exe RSCRIPT="Rscript.exe" SUDO="" test
