--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: make -f Makefile.win CC=gcc.exe
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build
+      run: make -f Makefile.mac
