--- a/Makefile.win
+++ b/Makefile.win
@@ -1,4 +1,5 @@
 include Makefile
 
+CFLAGS = -O2 -Wall -fPIC -mno-ms-bitfields -g -std=gnu99
 LIBS = -lntdll -lpsapi -ldbghelp -lpthread -static
 BIN = xrprof.exe
